--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@
   --warning: #ffbd59;
   --info: #387c44;
 
-  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-1: #EAEAEA
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
